learning/cluster-generate/monitoring/custom/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 11.5.2
  name: grafana
  namespace: monitoring
spec:
  type: ClusterIP # Changed from LoadBalancer to ClusterIP for ingress compatibility
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
